# bank-app

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile  build.rs
backend/src/: main.rs  users.rs
database/: Dockerfile
database/scripts/: init.sh  seed.sql
docs/: README.md
frontend/src/pages/: index.tsx
microservices/users-service/: .dockerignore  Cargo.toml  Dockerfile  build.rs  sqlx-data.json
microservices/users-service/src/: client.rs  server.rs
proto/: users.proto
