[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.17"

[build-dependencies]
tonic-build = "0.7"
