[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.7"
prost = "0.10"
async-std = { version = "1.8.0", features = ["attributes", "tokio1"] }
log = "0.4.17"
env_logger = "0.7"

[build-dependencies]
tonic-build = "0.7"
