[package]
name = "users-serivce"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "users-service"
path = "src/server.rs"

[[bin]]
name = "users-client"
path = "src/client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5", features = [ "offline", "runtime-tokio-rustls", "postgres", "macros", "uuid", "json" ] }
log = "0.4.17"

[build-dependencies]
tonic-build = "0.7"
